# rz

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  clippy.toml  cmd.rs  error.rs  filter.rs  flake.nix  format.rs  lib.rs  main.rs  modify.rs  progress.rs  release.toml  seven_z.rs  tar.rs  tar_bz2.rs  tar_gz.rs  tar_xz.rs  tar_zst.rs  zip.rs
.github/workflows/: ci.yml  mirror.yml  release.yml
benches/: archive.rs
tests/: exclude_strip.rs  list_info.rs  modify.rs  reproducibility.rs  round_trip.rs  symlinks.rs  time_filters.rs
tests/helpers/: mod.rs
