[package]
name = "rz"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rz"
path = "main.rs"

[lib]
path = "lib.rs"

[features]
xz2 = ["dep:xz2"]
bzip2 = ["dep:bzip2"]

[dependencies]
bzip2 = { version = "0.6", optional = true }
camino = "1.2"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
fs-err = "3.3"
infer = "0.19.0"
lzma-rs = "0.3"
ruzstd = "0.8"
tar = "0.4.44"
thiserror = "2"
xz2 = { version = "0.1", optional = true }
sevenz-rust2 = "0.20"
zip = "8.2.0"

[lints.clippy]
disallowed_types = "deny"
disallowed_methods = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
