[package]
name = "rz-archive"
version = "0.11.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Multi-format archive tool — tar, zip, 7z with a unified CLI"
repository = "https://codeberg.org/ryf/rz"

[[bin]]
name = "rz"
path = "main.rs"

[lib]
name = "rz"
path = "lib.rs"

[features]
xz2 = ["dep:xz2"]
bzip2 = ["dep:bzip2"]

[dependencies]
bzip2 = { version = "0.6", optional = true }
camino = { version = "1.2", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"
flate2 = "1.1"
fs-err = "3.3"
globset = "0.4"
ignore = "0.4"
indicatif = "0.18"
infer = "0.19"
lzma-rust2 = "0.16"
rayon = "1.10"
ruzstd = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
thiserror = "2"
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
xz2 = { version = "0.1", optional = true }
sevenz-rust2 = "0.20"
zip = "8.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "archive"
harness = false

[lints.clippy]
disallowed_types = "deny"
disallowed_methods = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

[package.metadata.release]
allow-branch = ["main"]
sign-commit = true
sign-tag = true
push-remote = "origin"
tag-prefix = "v"
tag-name = "{{prefix}}{{version}}"
publish = true
